fix playdex sizing on mobile

--- a/src/Playdex/Playdex.module.css
+++ b/src/Playdex/Playdex.module.css
@@ -11,3 +11,8 @@
   justify-content: center;
   padding-bottom: 20px;
 }
+
+.movescontainer > div {
+  max-width: 95%;
+  font-size: 0.9em;
+}
